Add rounders for fraction capture groups
Added the following rounders: case-insensitive 'C' (Ceil) or 'U' (Up) for rounding up, 'F' (Floor) or 'D' (Down) for rounding down, 'A' for automatic choice (not needed), as well as TRIM-exclusive '+' and '-' for rounding up and down respectively.